[package]
name = "rust-weather"
version = "0.1.0"
authors = ["Thomas Chaplin <thomaschaplin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
exitfailure = "0.5.1"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.67"
serde_derive = "1.0.130"
tokio = { version = "1.13.1", features = ["full"] }
chrono = "0.4.19"
dotenv_codegen = "0.15.0"
